--- a/plugin-validate/pom.xml
+++ b/plugin-validate/pom.xml
@@ -5,14 +5,15 @@
 	<groupId>com.sly</groupId>
 	<artifactId>plugin-validate</artifactId>
 	<version>1.0</version>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>com.sly</groupId>
 			<artifactId>plugin-common</artifactId>
 			<version>1.0</version>
+			<scope>provided</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -26,8 +27,8 @@
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
-	
-	
+
+
 	<build>
 		<plugins>
 			<plugin>
