--- a/plugin-anti-duplicate-commit/pom.xml
+++ b/plugin-anti-duplicate-commit/pom.xml
@@ -32,6 +32,7 @@
 			<groupId>com.sly</groupId>
 			<artifactId>plugin-common</artifactId>
 			<version>1.0</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
