--- a/plugin-sensitiveword/pom.xml
+++ b/plugin-sensitiveword/pom.xml
@@ -8,10 +8,22 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.sly</groupId>
+			<artifactId>plugin-common</artifactId>
+			<version>1.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 			<version>2.0.6.RELEASE</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<version>2.0.6.RELEASE</version>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 
