--- a/plugin-sensitiveword/pom.xml
+++ b/plugin-sensitiveword/pom.xml
@@ -7,18 +7,26 @@
 	<version>1.0</version>
 
 	<dependencies>
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.sly</groupId>
 			<artifactId>plugin-common</artifactId>
 			<version>1.0</version>
 			<scope>provided</scope>
+		</dependency> -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.8.1</version>
+			<scope>provided</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 			<version>2.0.6.RELEASE</version>
 			<scope>provided</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
