--- a/plugin-email/pom.xml
+++ b/plugin-email/pom.xml
@@ -6,6 +6,34 @@
 	<artifactId>plugin-email</artifactId>
 	<version>1.0</version>
 
+	<dependencies>
+		<dependency>
+			<groupId>com.sly</groupId>
+			<artifactId>plugin-common</artifactId>
+			<version>1.0</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-email</artifactId>
+		    <version>1.5</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+			<version>2.0.6.RELEASE</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<version>2.0.6.RELEASE</version>
+			<optional>true</optional>
+		</dependency>
+		
+	</dependencies>
 
 	<build>
 		<plugins>
