--- a/plugin-email/pom.xml
+++ b/plugin-email/pom.xml
@@ -2,15 +2,18 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.sly</groupId>
 	<artifactId>plugin-email</artifactId>
-	<version>1.0</version>
+	
+	<parent>
+		<groupId>com.sly</groupId>
+		<artifactId>plugin-parent</artifactId>
+		<version>1.0</version>
+	</parent>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.sly</groupId>
 			<artifactId>plugin-common</artifactId>
-			<version>1.0</version>
 		</dependency>
 		
 		<dependency>
@@ -22,14 +25,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-			<version>2.0.6.RELEASE</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
-			<version>2.0.6.RELEASE</version>
 			<optional>true</optional>
 		</dependency>
 		
@@ -40,7 +41,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
