--- a/plugin-ftp-pool-starter/pom.xml
+++ b/plugin-ftp-pool-starter/pom.xml
@@ -2,15 +2,18 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.sly</groupId>
 	<artifactId>plugin-ftp-pool-starter</artifactId>
-	<version>1.0</version>
+
+	<parent>
+		<groupId>com.sly</groupId>
+		<artifactId>plugin-parent</artifactId>
+		<version>1.0</version>
+	</parent>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.sly</groupId>
 			<artifactId>plugin-ftp-pool</artifactId>
-			<version>1.0</version>
 		</dependency>
 	</dependencies>
 
@@ -19,7 +22,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
