--- a/plugin-parent/pom.xml
+++ b/plugin-parent/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.sly</groupId>
 	<artifactId>plugin-parent</artifactId>
-	<version>${plugin.version}</version>
+	<version>1.0</version>
 	<packaging>pom</packaging>
 
 	<parent>
