--- a/plugin-redis/pom.xml
+++ b/plugin-redis/pom.xml
@@ -8,7 +8,7 @@
 		<groupId>com.sly</groupId>
 		<artifactId>plugin-parent</artifactId>
 		<version>1.0</version>
-		<relativePath>../plugin-parent/pom.xml</relativePath>
+		<!-- <relativePath>../plugin-parent/pom.xml</relativePath> -->
 	</parent>
 
 	<build>
