--- a/plugin-urf-parent/pom.xml
+++ b/plugin-urf-parent/pom.xml
@@ -10,6 +10,10 @@
 	<artifactId>plugin-urf-parent</artifactId>
 	<packaging>pom</packaging>
 	
+	<modules>
+		<module>../plugin-urf-common</module>
+		<module>../plugin-urf-server-starter</module>
+	</modules>
 	
 	<dependencyManagement>
 		<dependencies>
