--- a/plugin-urf-parent/pom.xml
+++ b/plugin-urf-parent/pom.xml
@@ -13,6 +13,7 @@
 	<modules>
 		<module>../plugin-urf-common</module>
 		<module>../plugin-urf-server-starter</module>
+		<module>../plugin-urf-web-starter</module>
 	</modules>
 	
 	<dependencyManagement>
